fixed extra spacing on fullad images in gmail

--- a/app/_components/fullad/_fullad.scss
+++ b/app/_components/fullad/_fullad.scss
@@ -28,6 +28,11 @@
   display: block;
 }
 
+.fullad img,
+.fullad-image img {
+  display: block;
+}
+
 @include bp(md) {
   .fullad {
     padding-left: $container-padding !important;
