--- a/app/_layouts/default/styles/_scaffolding.scss
+++ b/app/_layouts/default/styles/_scaffolding.scss
@@ -52,7 +52,6 @@ a, .link {
 
 img {
   outline: none;
-  text-decoration: none;
   -ms-interpolation-mode: bicubic;
   border: 0;
   max-width: 100%;
